# SpaceShipGame

CLionProjects/SpaceShipGame/: Asteroids.cpp  Asteroids.h  Board.cpp  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  ExtraVittality.cpp  ExtraVittality.h  ExtraVittalityGraphic.cpp  ExtraVittalityGraphic.h  GameManager.cpp  GameManager.h  IntroController.cpp  IntroController.h  IntroView.cpp  IntroView.h  ScoreController.cpp  ScoreController.h  ScoreView.cpp  ScoreView.h  Ship.cpp  Ship.h  ShipGraphic.cpp  ShipGraphic.h  Shoot.cpp  Shoot.h  ShootController.cpp  ShootController.h  ShootView.cpp  ShootView.h  asteroidsGraphic.cpp  asteroidsGraphic.h  main.cpp  shipController.cpp  shipController.h
